// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BPI connect mapDispatchToProps should should pass valid actions dispatch 1`] = `
Array [
  Object {
    "payload": Array [
      Object {
        "date": "2006-10-01",
        "description": "Mt. Gox founding",
      },
      Object {
        "date": "2015-01-06",
        "description": "Mt. Gox Bankruptcy",
      },
      Object {
        "date": "2016-05-01",
        "description": "Mt. Gox Bankruptcy (Final)",
      },
      Object {
        "date": "2017-04-01",
        "description": "Bitfinex announced that it was no longer able to let users withdraw their funds in USD",
      },
    ],
    "type": "BPI_SET_HIGHLIGHT",
  },
]
`;

exports[`BPI connect mapDispatchToProps should should pass valid actions dispatch 2`] = `
Array [
  Object {
    "payload": "20121027",
    "type": "BPI_SET_START_DATE",
  },
]
`;

exports[`BPI connect mapDispatchToProps should should pass valid actions dispatch 3`] = `
Array [
  Object {
    "payload": "20171027",
    "type": "BPI_SET_END_DATE",
  },
]
`;

exports[`BPI connect mapDispatchToProps should should pass valid actions dispatch 4`] = `
Array [
  Object {
    "payload": "20171021",
    "type": "BPI_SET_END_DATE",
  },
]
`;

exports[`BPI connect mapDispatchToProps should should pass valid actions dispatch 5`] = `
Array [
  Object {
    "payload": "20171021",
    "type": "BPI_SET_START_DATE",
  },
]
`;

exports[`BPI connect mapDispatchToProps should should pass valid actions dispatch 6`] = `
Array [
  Object {
    "payload": "USD",
    "type": "BPI_SET_CURRENCY",
  },
]
`;

exports[`BPI connect mapDispatchToProps should should pass valid actions dispatch 7`] = `
Array [
  Object {
    "payload": "USD",
    "type": "BPI_SET_CURRENCY",
  },
]
`;

exports[`BPI connect mapDispatchToProps should should pass valid actions dispatch 8`] = `
Array [
  Object {
    "payload": Array [
      "USD",
      "BGP",
    ],
    "type": "BPI_SET_AVAILABLE_CURRENCIES",
  },
]
`;

exports[`BPI connect mapDispatchToProps should should pass valid actions dispatch 9`] = `
Array [
  Object {
    "payload": "CURRENCY1",
    "type": "BPI_SET_CURRENCY",
  },
]
`;

exports[`BPI connect mapDispatchToProps should should pass valid actions dispatch 10`] = `
Array [
  Object {
    "payload": Array [
      "CURRENCY1",
      "CURRENCY2",
    ],
    "type": "BPI_SET_AVAILABLE_CURRENCIES",
  },
]
`;

exports[`BPI connect mapDispatchToProps should should pass valid actions dispatch 11`] = `
Array [
  Object {
    "payload": Array [],
    "type": "BPI_SET_DATA",
  },
]
`;

exports[`BPI connect mapDispatchToProps should should pass valid actions dispatch 12`] = `
Array [
  Object {
    "payload": "DESCRIPTION",
    "type": "BPI_SET_CURRENT_HIGHLIGHT_DESCRIPTION",
  },
]
`;

exports[`BPI connect mapDispatchToProps should should pass valid actions dispatch 13`] = `
Array [
  Object {
    "payload": Object {
      "date": "20171021",
      "description": "DESCRIPTION",
    },
    "type": "BPI_SET_CURRENT_HIGHLIGHT_DATE",
  },
]
`;

exports[`BPI connect mapDispatchToProps should should pass valid actions dispatch 14`] = `
Array [
  Object {
    "payload": Object {
      "date": "2017-10-21",
      "description": "DESCRIPTION",
    },
    "type": "BPI_ADD_HIGHLIGHT",
  },
]
`;

exports[`BPI connect mapDispatchToProps should should pass valid actions dispatch 15`] = `
Array [
  Object {
    "type": "BPI_SET_CURRENT_HIGHLIGHT_RESET",
  },
]
`;
